--- a/17.testing.md
+++ b/17.testing.md
@@ -1,16 +1,15 @@
-<p>Nuxt helloworld 官网例子操作记录</p>
-<p>&nbsp;</p>
-<p>根据官网的guide从头开始新建项目 步骤如下</p>
-<ol>
-<li>直接新建文件夹helloworld或者在cmd命令行里面输入mkdir helloworld新建文件夹</li>
-<li>我是在vs code里面操作的，在helloworld文件夹里面新建json文件，并在package.json写配置和操作内容。package.json文件用来设定如何运行nuxt。</li>
-<li>安装nuxt，打开终端或者cmd命令行输入 npm install &ndash;save nuxt或者npm i &ndash;s nuxt</li>
-</ol>
-<p>会生成下图中一个依赖包和记录package的具体来源和版本号package-lock.json文件</p>
-<ol start="4">
-<li>创建pages文件夹，nuxt会依据pages目录中的所有后缀为vue的文件生成应用的路由配置，新建vue和about.vue文件并编写相应代码</li>
-</ol>
-<p>asyncData方法是在组件<strong>初始化</strong>前被调用的，所以在方法内是没有办法通过 this 来引用组件的实例对象。Api网址:https://www.bookstack.cn/read/nuxtjs-guide/preface.md</p>
-<ol start="5">
-<li>回到终端或者cmd命令行输入npm run dev运行项目，项目启动成功会出现一个.nuxt文件夹</li>
-</ol>
+Nuxt helloworld 官网例子操作记录
+
+ 
+
+根据官网的guide从头开始新建项目 步骤如下
+
+直接新建文件夹helloworld或者在cmd命令行里面输入mkdir helloworld新建文件夹
+我是在vs code里面操作的，在helloworld文件夹里面新建json文件，并在package.json写配置和操作内容。package.json文件用来设定如何运行nuxt。
+安装nuxt，打开终端或者cmd命令行输入 npm install –save nuxt或者npm i –s nuxt
+会生成下图中一个依赖包和记录package的具体来源和版本号package-lock.json文件
+
+创建pages文件夹，nuxt会依据pages目录中的所有后缀为vue的文件生成应用的路由配置，新建vue和about.vue文件并编写相应代码
+asyncData方法是在组件初始化前被调用的，所以在方法内是没有办法通过 this 来引用组件的实例对象。Api网址:https://www.bookstack.cn/read/nuxtjs-guide/preface.md
+
+回到终端或者cmd命令行输入npm run dev运行项目，项目启动成功会出现一个.nuxt文件夹
