Nuxt.js 官网例子小结

--- a/17.testing.md
+++ b/17.testing.md
@@ -1,15 +1,13 @@
-Nuxt helloworld ¹ÙÍøÀı×Ó²Ù×÷¼ÇÂ¼
+Nuxt testingå®˜ç½‘ä¾‹å­æ“ä½œè®°å½•
 
- 
-
-¸ù¾İ¹ÙÍøµÄguide´ÓÍ·¿ªÊ¼ĞÂ½¨ÏîÄ¿ ²½ÖèÈçÏÂ
-
-Ö±½ÓĞÂ½¨ÎÄ¼ş¼Ğhelloworld»òÕßÔÚcmdÃüÁîĞĞÀïÃæÊäÈëmkdir helloworldĞÂ½¨ÎÄ¼ş¼Ğ
-ÎÒÊÇÔÚvs codeÀïÃæ²Ù×÷µÄ£¬ÔÚhelloworldÎÄ¼ş¼ĞÀïÃæĞÂ½¨jsonÎÄ¼ş£¬²¢ÔÚpackage.jsonĞ´ÅäÖÃºÍ²Ù×÷ÄÚÈİ¡£package.jsonÎÄ¼şÓÃÀ´Éè¶¨ÈçºÎÔËĞĞnuxt¡£
-°²×°nuxt£¬´ò¿ªÖÕ¶Ë»òÕßcmdÃüÁîĞĞÊäÈë npm install ¨Csave nuxt»òÕßnpm i ¨Cs nuxt
-»áÉú³ÉÏÂÍ¼ÖĞÒ»¸öÒÀÀµ°üºÍ¼ÇÂ¼packageµÄ¾ßÌåÀ´Ô´ºÍ°æ±¾ºÅpackage-lock.jsonÎÄ¼ş
-
-´´½¨pagesÎÄ¼ş¼Ğ£¬nuxt»áÒÀ¾İpagesÄ¿Â¼ÖĞµÄËùÓĞºó×ºÎªvueµÄÎÄ¼şÉú³ÉÓ¦ÓÃµÄÂ·ÓÉÅäÖÃ£¬ĞÂ½¨vueºÍabout.vueÎÄ¼ş²¢±àĞ´ÏàÓ¦´úÂë
-asyncData·½·¨ÊÇÔÚ×é¼ş³õÊ¼»¯Ç°±»µ÷ÓÃµÄ£¬ËùÒÔÔÚ·½·¨ÄÚÊÇÃ»ÓĞ°ì·¨Í¨¹ı this À´ÒıÓÃ×é¼şµÄÊµÀı¶ÔÏó¡£ApiÍøÖ·:https://www.bookstack.cn/read/nuxtjs-guide/preface.md
-
-»Øµ½ÖÕ¶Ë»òÕßcmdÃüÁîĞĞÊäÈënpm run devÔËĞĞÏîÄ¿£¬ÏîÄ¿Æô¶¯³É¹¦»á³öÏÖÒ»¸ö.nuxtÎÄ¼ş¼Ğ
+è¯¥ä¾‹å­æ˜¯æµ‹è¯•ç¤ºä¾‹ï¼Œå•å…ƒæµ‹è¯•å°±æ˜¯è¿™é‡Œäº†ï¼Œè¿™é‡Œä½¿ç”¨åˆ°avaè‡ªåŠ¨åŒ–æµ‹è¯• æ–‡æ¡£ï¼šhttps://www.npmjs.com/package/ava
+è¿™ä¸ªåº”è¯¥æ˜¯ç›¸å¯¹æ¯”è¾ƒå¥½çš„ï¼Œç¿»å¢™è§‚çœ‹æ¯”è¾ƒå¿«ï¼š
+https://github.com/avajs/ava-docs/blob/master/zh_CN/readme.md
+è§‚çœ‹è¿™ä¸ªhttps://eggjs.org/zh-cn/core/unittest.htmlå¯ä»¥äº†è§£åˆ°å•å…ƒæµ‹è¯•ã€‚
+æ“ä½œæµç¨‹çœ‹è¿™é‡Œå¯ä»¥æœ‰ä¸ªå¤§æ¦‚ç­”æ¡ˆï¼šhttps://juejin.im/entry/597e88035188257f833d3bb8ã€‚
+1.	ä¸»è¦ä»£ç å¦‚ä¸‹ï¼Œpackage.jsoné‚£é‡Œå¯ä»¥çœ‹åˆ°testæ‰§è¡Œå‘½ä»¤ã€‚testç›®å½•ä¸‹çš„index.test.jså°±æ˜¯è‡ªè¡Œç¼–å†™æµ‹è¯•æ–‡ä»¶ï¼Œæ˜¯ç”¨æ¥æµ‹è¯•pagesç›®å½•ä¸‹index.vueçš„ã€‚
+![](assets/17.testing-443f688d.png)
+2.	æ‰§è¡Œnpm testï¼Œä¼šå¾—åˆ°ä¸‹å›¾ï¼Œä¸Šå›¾å¯ä»¥çœ‹åˆ°pages/index.vueé‡Œé¢ç¬¬äºŒè¡Œhello{name}ï¼Œæµ‹è¯•è¦æ±‚æ˜¯20è¡Œå’Œ29è¡Œhelloå’Œworldä¹‹é—´æ˜¯æœ‰ç©ºæ ¼çš„ï¼Œæ‰€ä»¥æŠ¥é”™äº†ã€‚
+![](assets/17.testing-d966d1a8.png)
+åœ¨æµ‹è¯•é‡Œé¢ï¼Œavaæ–°å»ºäº†ä¸€ä¸ªé¡¹ç›®nuxtï¼Œå¯åŠ¨4000ç«¯å£æœåŠ¡ï¼Œåœ¨æœåŠ¡ç«¯å¯ä»¥å¾—åˆ°è¿”å›çš„htmlæ•°æ®åœ¨19è¡Œï¼Œé‚£æ ·å¯ä»¥æµ‹è¯•htmlæ˜¯å¦å«æœ‰æŒ‡å®šå­—ç¬¦ä¸²ä¿¡æ¯ã€‚æ¥ç€ä½¿ç”¨jsdomæ¨¡æ‹Ÿæµè§ˆå™¨ç¯å¢ƒè¿›è¡Œdomå†…å®¹æµ‹è¯•ï¼Œç±»åæµ‹è¯•å’Œæ ·å¼æµ‹è¯•ã€‚æœ€åå…³é—­4000ç«¯å£æœåŠ¡ã€‚
+jsdomï¼šhttps://github.com/jsdom/jsdom
